Implemented changes for Frontend
