# api/src/controllers/owners/ownerPoaps.ts
@@ -1,15 +1,14 @@
 import { Controller, Get, Query, Route } from "tsoa";
-import { requirePool, getOwnerPoaps } from "@game/db";
+import { requirePool, getOwnerPoaps, IGetOwnerPoapsParams } from "@game/db";
 import type { OwnerPoapsResponse } from "@game/utils";
 
 @Route("owner_poaps")
 export class OwnerPoapsController extends Controller {
   @Get()
-  public async get(@Query() wallet: string): Promise<OwnerPoapsResponse> {
+  public async get(@Query() ownerAddress: string): Promise<OwnerPoapsResponse> {
     const pool = requirePool();
-    wallet = wallet.toLowerCase();
 
-    const userPoaps = await getOwnerPoaps.run({ address: wallet }, pool);
+    const userPoaps = await getOwnerPoaps.run({ ownerAddress }, pool);
     console.log("🚀 ~ OwnerPoapsController ~ get ~ userPoaps:", userPoaps);
     return { poaps: userPoaps };
   }
